APL-705 fixed merge conflicts;